[package]
name = "dot-env-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive", "env", "cargo"] }
dirs = "5.0.1"
chrono = "0.4.31"
chrono-tz = "0.8.5"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "fs"] }
anyhow = "1.0.79"
rusqlite = "0.30.0"
tempfile = "3.9.0"
ulid = "1.1.0"
globmatch = "0.3.0"
